[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lunogram-sdk"
version = "0.1.0"
description = "Python SDK for Lunogram API"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
]

[project.urls]
Homepage = "https://github.com/lunogram/py-sdk"

[tool.hatch.build.targets.sdist]
include = ["/src"]

[tool.hatch.build.targets.wheel]
packages = ["src/lunogram"]
